user_practice.txt
Project 1 TASK 3


(base) C:\Users\Admin>python
Python 3.10.8 | packaged by conda-forge | (main, Nov 24 2022, 14:07:00) [MSC v.1916 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> 45+72
117
>>> x=7
>>> y=3
>>> x+y
10
>>> total=x+y
>>> total
10
>>> type(x)
<class 'int'>
>>> type(y)
<class 'int'>
>>> type(10.5)
<class 'float'>
>>> total=10.8+12.2+0.2
>>> total
23.2
>>> 7*8
56
>>> 7*4
28
>>> 2**10
1024
>>> 9**(1/2)
3.0
>>> 7/4
1.75
>>> 7//4
1
>>> 3//5
0
>>> 14//7
2
>>> -13/4
-3.25
>>> -13//4
-4
>>> 17%5
2
>>> 7.5%3.5
0.5
>>> 10*(5+3)
80
>>> 10*5+3
53
>>> 3*(4-5)
-3
>>> 3*4-5
7
>>> 4**3**2
262144
>>> (4**3)**2
4096
>>> 4**(3**2)
262144
>>> print('welcome to python!')
welcome to python!
>>> print("welcome to python!")
welcome to python!
>>> print('welcome', 'to', 'python!')
welcome to python!
>>> print('welcome\nto\n\python!')
welcome
to
\python!
>>> print('this is a longer string,so we\ split it over two lines)
  File "<stdin>", line 1
    print('this is a longer string,so we\ split it over two lines)
          ^
SyntaxError: unterminated string literal (detected at line 1)
>>> print('this is a longer string,so we\ split it over two lines')
this is a longer string,so we\ split it over two lines
>>> print('Sum is', 7+3)
Sum is 10
>>> type(word)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'word' is not defined. Did you mean: 'ord'?
>>> type('word')
<class 'str'>
>>> print('int(5.2)', 'truncates 5.2 to', int(5.2))
int(5.2) truncates 5.2 to 5
>>> print('Display "hi" in quotes')
Display "hi" in quotes
>>> print('Display \'hi\' in quotes')
Display 'hi' in quotes
>>> print("Display the name O'Brien")
Display the name O'Brien
>>> print("Display \"hi\" in quotes")
Display "hi" in quotes
>>> print("""Display "hi" and 'bye' in quotes""")
Display "hi" and 'bye' in quotes
>>>  triple_quoted_string = """This is a triple-quoted
  File "<stdin>", line 1
    triple_quoted_string = """This is a triple-quoted
IndentationError: unexpected indent
>>>  triple_quoted_string = """This is a triple-quoted string that spans two lines"""
  File "<stdin>", line 1
    triple_quoted_string = """This is a triple-quoted string that spans two lines"""
IndentationError: unexpected indent
>>> triple_quoted_string = """This is a triple-quoted string that spans two lines"""
>>> print(triple_quoted_string)h
  File "<stdin>", line 1
    print(triple_quoted_string)h
                               ^
SyntaxError: invalid syntax
>>> print(triple_quoted_string)
This is a triple-quoted string that spans two lines
>>> print("""This is a lenghty multiline string containing a few lines\ of text""")
This is a lenghty multiline string containing a few lines\ of text
>>> name=input("what's your name?")
what's your name?paul
>>> name
'paul'
>>> print(name)
paul
>>> name=input("what's your name?")
what's your name?'Paul'
>>> name
"'Paul'"
>>> print(name)
'Paul'
>>> value1=input('Enter first number: ')
Enter first number: 7
>>> value2=input('Enter second number: ')
Enter second number: 3
>>> value1+value2
'73'
>>> value=input('Enter an integer: ')
Enter an integer: 7
>>> value=int(value)
>>> value
7
>>> another_value = int(input('Enter another integer: '))
Enter another integer: 13
>>> another_value
13
>>> value+another_value
20
>>> int(10.5)
10
>>> float(10)
10.0
>>> float('6.2')*3.3
20.46
>>>
